fix spacing, increase 'load more btn size, update bg color on light mode

--- a/src/components/Button/_button.scss
+++ b/src/components/Button/_button.scss
@@ -29,7 +29,7 @@
 .btn-show-more {
   color:var(--themeSimpleTextColor);
   text-transform: lowercase;
-  font-size: 1rem;
+  font-size: 1.25rem;
   margin: 0 auto;
   padding: 0.5em 1.5em;
   border: 2px solid var(--themeSimpleTextColor);
