--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -34,3 +34,13 @@ $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
+
+// DISPLAY
+$block: block;
+$inline-block: inline-block;
+
+// SPACES
+$space-0: 0rem;
+$space-025: 0.25rem;
+$space-050: 0.50rem;
+$space-1: 1rem;
